--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -55,12 +55,12 @@ author_profile: true
         margin-bottom: 10px;
     }
     .title{
-        font-family: 'Merriweather',Georgia, Times;
+        font-family: 'Merriweather', Times ,Georgia;
         font-size: 17px;
     }
     .body {
         padding-left: 15px;
-        font-family: 'HelveticaNeue-Light','Merriweather', Georgia, Times;
+        font-family: 'HelveticaNeue-Light','Merriweather', Times, Georgia;
         font-size: 18px;
     }
     article {
