--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -20,7 +20,7 @@ author_profile: true
                     Add your description here
                 </td>
                 <td width="50%">
-                    <img class="side" src="../images/miniCSRanking.png" width="100%">
+                    <img class="side" src="../images/Logistic-Function.png" width="100%">
                 </td>
             </tr>
             </tbody>
