--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -46,13 +46,13 @@ author_profile: true
         margin-bottom: 10px;
     }
     .title{
-        font-family: 'Merriweather',Georgia, Times;
-        font-size: 17px;
+        font-family: 'Merriweather', Times,Georgia;
+        font-size: 18px;
     }
     .body {
         padding-left: 15px;
-        font-family: 'HelveticaNeue-Light','Merriweather', Georgia, Times;
-        font-size: 18px;
+        font-family: 'HelveticaNeue-Light','Merriweather', Times, Georgia;
+        font-size: 16px;
     }
     article {
         overflow: hidden;
