--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -17,10 +17,10 @@ author_profile: true
                     <br><!--小字-->
                     by Wei Zhang, Wei yan and <a href="https://xinyuuzhou.github.io/">Xinyu Zhou</a>
                     <br><!--文案-->
-                    Add your description here
+                    We collected online questionnaires for the project (N=174), and I applied Logistics regression / linear regression / bootstrap sampling to analyze the data!
                 </td>
                 <td width="50%">
-                    <img class="side" src="../images/Logistic-Function.png" width="100%">
+                    <img class="side" src="../images/Logistics_regression.png" width="100%">
                 </td>
             </tr>
             </tbody>
