--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -20,7 +20,7 @@ author_profile: true
                     We collected online questionnaires for the project (N=174), and I applied Logistics regression / linear regression / bootstrap sampling to analyze the data!
                 </td>
                 <td width="50%">
-                    <img class="side" src="../images/Logistics_regression.png" width="100%">
+                    <img class="side" src="../images/Logistics_regression.jpg" width="100%">
                 </td>
             </tr>
             </tbody>
