--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -11,7 +11,7 @@ author_profile: true
             <tbody>
             <tr>
                 <td>
-                    <a class="title" href="">
+                    <a class="title" href="https://github.com/xinyuuzhou/Health_econ_midterm">
                         <b>Midterm project for Health Economics</b><!--项目名称-->
                     </a>
                     <br><!--小字-->
