--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -42,7 +42,7 @@ author_profile: true
                     This project used dataset "Student performance in California schools". In this project, I sampled 60 schools for a pilot study to estimate stratum variances, and use Neyman’s allocation to sample 600 schools to estimate the population mean. Statistical package such as R is applied in this assignment.
                 </td>
                 <td width="50%">
-                    <img class="side" src="../images/Logistics_regression.jpg" width="100%">
+                    <img class="side" src="../images/SRS_and_Stratified_sampling-STATS262.jpg">
                 </td>
             </tr>
             </tbody>
