--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -14,7 +14,7 @@ author_profile: true
         </li>
         <li><h1 class="title">Cross-country comparison of public awareness, rumours, and behavioural responses to the COVID-19 epidemic: An internet surveillance study.</h1>
             <p>Zhiyuan Hou, Fanxing Du, <b>Xinyu Zhou</b>, Hao Jiang, Sam Martin, Heidi Larson, Leesa Lin</p>
-            <p><em>in press</em></p>
+            <p><em>Journal of Medical Internet Research</em></p>
         </li>
     </ul>
 
